@@ -11,3 +11,7 @@ public class Perfulandia2025Application {
 	}
 
 }
+
+/*
+--enable-native-access=ALL-UNNAMED
+*/
